apps/map-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: map-api
  labels:
    app: map-api
spec:
  type: ClusterIP
  selector:
    app: map-api
  ports:
    - name: http
      port: 8002
      targetPort: http
