apps/map-api/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: map-api
  labels:
    app: map-api
spec:
  parentRefs:
    - name: local-alb
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - map-api.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: map-api
          port: 8002
